--- a/tentang.html
+++ b/tentang.html
@@ -105,7 +105,8 @@
       }
     </style>
   </head>
-  <body class="bg-gray-50 font-sans antialiased">
+  <body class="bg-gray-50 font-sans">
+    <div id="navbar-container"></div>
     <!-- Navbar -->
     <div id="navbar-container"></div>
 
@@ -337,9 +338,9 @@
               <div class="flex flex-col md:flex-row items-center justify-between">
                 <div class="mb-4 md:mb-0">
                   <h3 class="text-xl font-bold mb-2">Siap Memulai Perizinan UMKM Anda?</h3>
-                  <p class="opacity-90">Daftar sekarang dan dapatkan kemudahan dalam mengurus perizinan</p>
+                  <p class="opacity-90">Jelajahi layanan kami dan temukan solusi yang tepat untuk kebutuhan Anda.</p>
                 </div>
-                <button class="bg-white text-primary font-bold px-5 py-2 rounded-lg shadow-md hover:bg-gray-100 transition-colors duration-300 flex items-center whitespace-nowrap"><i class="fas fa-rocket mr-2"></i> Mulai Sekarang</button>
+                <a href="layanan.html" class="bg-white text-primary font-bold px-5 py-2 rounded-lg shadow-md hover:bg-gray-100 transition-colors duration-300 flex items-center whitespace-nowrap"><i class="fas fa-rocket mr-2"></i> Jelajahi Layanan</a>
               </div>
             </div>
           </div>
@@ -478,5 +479,6 @@
         });
       });
     </script>
+      <script src="/js/navbar.js"></script>
   </body>
 </html>
