--- a/navbar.html
+++ b/navbar.html
@@ -1,46 +1,39 @@
 <header class="bg-white shadow-md sticky top-0 z-40">
-  <div class="container mx-auto px-4 py-3">
-    <div class="flex items-center justify-between">
-      <a href="index.html" class="flex items-center">
-        <div class="bg-primary text-white w-10 h-10 rounded-lg flex items-center justify-center">
-          <i class="fas fa-file-contract text-xl"></i>
-        </div>
-        <div class="ml-3">
-          <h1 class="text-xl font-bold text-primary">Izin.In</h1>
-        </div>
-      </a>
+  <div class="container mx-auto px-4">
+    <div class="flex justify-between items-center py-4">
+      <!-- Logo -->
+      <a href="index.html" class="text-2xl font-bold text-primary">Izin.In</a>
 
-      <nav class="hidden md:flex items-center space-x-6">
-        <a href="index.html" class="text-gray-700 hover:text-primary transition-colors">Beranda</a>
-        <a href="layanan.html" class="text-gray-700 hover:text-primary transition-colors">Layanan</a>
-        <a href="tentang.html" class="text-gray-700 hover:text-primary transition-colors">Tentang</a>
-        <a href="berita.html" class="text-gray-700 hover:text-primary transition-colors">Berita</a>
-        <a href="kontak.html" class="text-gray-700 hover:text-primary transition-colors">Kontak</a>
-        <a href="pengaduan.html" class="text-gray-700 hover:text-primary transition-colors">Pengaduan</a>
-
+      <!-- Desktop Navigation -->
+      <nav class="hidden md:flex space-x-8">
+        <a href="index.html" class="text-gray-600 hover:text-primary transition">Beranda</a>
+        <a href="layanan.html" class="text-gray-600 hover:text-primary transition">Layanan</a>
+        <a href="berita.html" class="text-gray-600 hover:text-primary transition">Berita</a>
+        <a href="tentang.html" class="text-gray-600 hover:text-primary transition">Tentang</a>
+        <a href="kontak.html" class="text-gray-600 hover:text-primary transition">Kontak</a>
+        <a href="pengaduan.html" class="text-gray-600 hover:text-primary transition">Pengaduan</a>
       </nav>
 
-      <!-- Mobile menu button -->
-      <button id="mobile-menu-button" class="md:hidden flex flex-col justify-center items-center w-8 h-8 cursor-pointer">
-        <span class="w-6 h-0.5 bg-gray-700 transition-all duration-300 ease-in-out"></span>
-        <span class="w-6 h-0.5 bg-gray-700 my-1 transition-all duration-300 ease-in-out"></span>
-        <span class="w-6 h-0.5 bg-gray-700 transition-all duration-300 ease-in-out"></span>
-      </button>
+      <!-- Mobile Menu Button -->
+      <div class="md:hidden">
+        <button id="mobile-menu-button" class="text-gray-600 hover:text-primary focus:outline-none">
+          <div class="w-6 h-0.5 bg-gray-600 mb-1.5 transition-transform duration-300"></div>
+          <div class="w-6 h-0.5 bg-gray-600 transition-opacity duration-300"></div>
+          <div class="w-6 h-0.5 bg-gray-600 mt-1.5 transition-transform duration-300"></div>
+        </button>
+      </div>
     </div>
   </div>
 
   <!-- Mobile Menu -->
-  <div id="mobile-menu" class="md:hidden hidden bg-white border-t border-gray-200">
-    <nav class="flex flex-col p-4 space-y-2">
-      <a href="index.html" class="text-gray-700 hover:text-primary p-2 rounded transition-colors">Beranda</a>
-      <a href="layanan.html" class="text-gray-700 hover:text-primary p-2 rounded transition-colors">Layanan</a>
-      <a href="tentang.html" class="text-gray-700 hover:text-primary p-2 rounded transition-colors">Tentang</a>
-      <a href="berita.html" class="text-gray-700 hover:text-primary p-2 rounded transition-colors">Berita</a>
-      <a href="kontak.html" class="text-gray-700 hover:text-primary p-2 rounded transition-colors">Kontak</a>
-      <a href="pengaduan.html" class="text-gray-700 hover:text-primary p-2 rounded transition-colors">Pengaduan</a>
-
+  <div id="mobile-menu" class="hidden md:hidden bg-white px-4 pb-4">
+    <nav class="flex flex-col space-y-2">
+      <a href="index.html" class="text-gray-600 hover:text-primary py-2 rounded-md transition">Beranda</a>
+      <a href="layanan.html" class="text-gray-600 hover:text-primary py-2 rounded-md transition">Layanan</a>
+      <a href="berita.html" class="text-gray-600 hover:text-primary py-2 rounded-md transition">Berita</a>
+      <a href="tentang.html" class="text-gray-600 hover:text-primary py-2 rounded-md transition">Tentang</a>
+      <a href="kontak.html" class="text-gray-600 hover:text-primary py-2 rounded-md transition">Kontak</a>
+      <a href="pengaduan.html" class="text-gray-600 hover:text-primary py-2 rounded-md transition">Pengaduan</a>
     </nav>
   </div>
 </header>
-
-
