--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
         <div class="mt-12 pt-8 border-t border-gray-700 text-center text-gray-400">
           <div class="mb-8 text-sm space-y-2">
             <p class="italic">"Web developer? More like an open invitation to get breached." – <span class="font-semibold">Naufal (Leader & Underground Hacker)</span></p>
-            <p class="italic">"Gak Cinta Dulu." – <span class="font-semibold">Bowo (Fullstack Developer & Student Leader)</span></p>
-            <p class="italic">"Masih Ngoding" – <span class="font-semibold">Iqbal (Genius Coder & WebDev)</span></p>
+            <p class="italic">"You drain my time, code feeds my mind." – <span class="font-semibold">Bowo (Fullstack Developer & Student Leader)</span></p>
+            <p class="italic">"The system’s in ruins, but my code’s still clean." – <span class="font-semibold">Iqbal (Genius Coder & WebDev)</span></p>
           </div>
           <hr class="border-gray-700 my-6">
           <p>&copy; 2025 Izin.In. Hak Cipta Dilindungi.</p>
