--- a/pengaduan.html
+++ b/pengaduan.html
@@ -151,6 +151,57 @@
     </footer>
     <script src="js/navbar.js"></script>
     <script src="js/isiPengaduan.js"></script>
+    <footer class="bg-secondary text-white pt-16 pb-8">
+      <div class="container mx-auto px-4">
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+          <div>
+            <h4 class="text-lg font-semibold mb-4">Izin.In</h4>
+            <p class="text-gray-300 mb-4">Platform resmi untuk memudahkan perizinan UMKM di Indonesia dengan pelayanan cepat dan transparan.</p>
+          </div>
+          <div>
+            <h4 class="text-lg font-semibold mb-4">Tautan</h4>
+            <ul class="space-y-2">
+              <li><a href="/" class="text-gray-300 hover:text-white">Beranda</a></li>
+              <li><a href="/tentang.html" class="text-gray-300 hover:text-white">Tentang Kami</a></li>
+              <li><a href="/berita.html" class="text-gray-300 hover:text-white">Berita</a></li>
+              <li><a href="/pengaduan.html" class="text-gray-300 hover:text-white">Pengaduan</a></li>
+              <li><a href="/kontak.html" class="text-gray-300 hover:text-white">Kontak</a></li>
+            </ul>
+          </div>
+          <div>
+            <h4 class="text-lg font-semibold mb-4">Kontak</h4>
+            <ul class="space-y-3 text-gray-300">
+              <li class="flex items-start"><i class="fas fa-map-marker-alt mt-1 mr-3"></i><span>Tambak, Berjo, Kec. Ngargoyoso, Kab. Karanganyar 57793 Karanganyar Central Java</span></li>
+              <li class="flex items-center"><i class="fas fa-phone-alt mr-3"></i><span>+62 856-4178-3101</span></li>
+              <li class="flex items-center"><i class="fas fa-envelope mr-3"></i><span>naufalhhdd@gmail.com</span></li>
+              <li class="flex items-center"><i class="fab fa-whatsapp mr-3"></i><span>+62 856-4178-3101</span></li>
+            </ul>
+          </div>
+          <div>
+            <h4 class="text-lg font-semibold mb-4">Media Sosial</h4>
+            <div class="flex space-x-4">
+              <a href="#" class="text-gray-300 hover:text-white"><i class="fab fa-facebook text-xl"></i></a>
+              <a href="#" class="text-gray-300 hover:text-white"><i class="fab fa-twitter text-xl"></i></a>
+              <a href="#" class="text-gray-300 hover:text-white"><i class="fab fa-instagram text-xl"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="mt-12 pt-8 border-t border-gray-700 text-center text-gray-400">
+          <div class="mb-8 text-sm space-y-2">
+            <p class="italic">"Web developer? More like an open invitation to get breached." – <span class="font-semibold">Naufal (Leader & Underground Hacker)</span></p>
+            <p class="italic">"You drain my time, code feeds my mind." – <span class="font-semibold">Bowo (Fullstack Developer & Student Leader)</span></p>
+            <p class="italic">"The system’s in ruins, but my code’s still clean." – <span class="font-semibold">Iqbal (Genius Coder & WebDev)</span></p>
+          </div>
+          <hr class="border-gray-700 my-6">
+          <p>&copy; 2025 Izin.In. Hak Cipta Dilindungi.</p>
+          <div class="mt-2 flex justify-center space-x-6 text-sm">
+            <a href="#" class="hover:text-white">Kebijakan Privasi</a>
+            <a href="#" class="hover:text-white">Syarat & Ketentuan</a>
+            <a href="#" class="hover:text-white">Peta Situs</a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
 <html lang="id">
@@ -167,55 +218,4 @@
         }
     </style>
 </head>
-<body class="bg-gray-100">
-
-    <div id="navbar-container"></div>
-
-    <!-- Page Header -->
-    <div class="bg-primary text-white py-16">
-        <div class="container mx-auto px-4 text-center">
-            <h2 class="text-4xl font-bold mb-3">Formulir Pengaduan</h2>
-            <p class="text-xl opacity-90 max-w-2xl mx-auto">Punya keluhan atau masukan? Sampaikan kepada kami melalui formulir di bawah ini.</p>
-        </div>
-    </div>
-
-    <!-- Main Content -->
-    <main class="py-16">
-        <div class="container mx-auto px-4">
-            <div class="max-w-2xl mx-auto bg-white p-8 rounded-lg shadow-lg">
-                <form id="pengaduanForm">
-                    <div class="mb-4">
-                        <label for="nama" class="block text-gray-700 font-medium mb-2">Nama Lengkap</label>
-                        <input type="text" id="nama" name="nama" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary" required>
-                    </div>
-                    <div class="mb-4">
-                        <label for="email" class="block text-gray-700 font-medium mb-2">Alamat Email</label>
-                        <input type="email" id="email" name="email" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary" required>
-                    </div>
-                    <div class="mb-4">
-                        <label for="judul" class="block text-gray-700 font-medium mb-2">Judul Pengaduan</label>
-                        <input type="text" id="judul" name="judul" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary" required>
-                    </div>
-                    <div class="mb-6">
-                        <label for="deskripsi" class="block text-gray-700 font-medium mb-2">Deskripsi Pengaduan</label>
-                        <textarea id="deskripsi" name="deskripsi" rows="6" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary" required></textarea>
-                    </div>
-                    <div>
-                        <button type="submit" class="w-full bg-primary text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition duration-300">Kirim Pengaduan</button>
-                    </div>
-                </form>
-                <div id="responseMessage" class="mt-6 text-center"></div>
-            </div>
-        </div>
-    </main>
-
-    <footer class="bg-secondary text-white pt-16 pb-8">
-        <div class="container mx-auto px-4 text-center">
-            <p>&copy; 2025 Izin.In. Hak Cipta Dilindungi.</p>
-        </div>
-    </footer>
-
-    <script src="js/navbar.js"></script>
-    <script src="js/isiPengaduan.js"></script>
-</body>
 </html>
