--- a/pengaduan.html
+++ b/pengaduan.html
@@ -103,10 +103,18 @@
             <h4 class="text-lg font-semibold mb-4">Izin.In</h4>
             <p class="text-gray-300 mb-4">Platform resmi untuk memudahkan perizinan UMKM di Indonesia dengan pelayanan cepat dan transparan.</p>
             <div class="flex space-x-4">
-              <a href="#" class="text-gray-300 hover:text-white"><i class="fab fa-facebook text-xl"></i></a>
-              <a href="#" class="text-gray-300 hover:text-white"><i class="fab fa-twitter text-xl"></i></a>
-              <a href="#" class="text-gray-300 hover:text-white"><i class="fab fa-instagram text-xl"></i></a>
-              <a href="#" class="text-gray-300 hover:text-white"><i class="fab fa-youtube text-xl"></i></a>
+              <a href="#" class="text-gray-300 hover:text-white">
+                <i class="fab fa-facebook text-xl"></i>
+              </a>
+              <a href="#" class="text-gray-300 hover:text-white">
+                <i class="fab fa-twitter text-xl"></i>
+              </a>
+              <a href="#" class="text-gray-300 hover:text-white">
+                <i class="fab fa-instagram text-xl"></i>
+              </a>
+              <a href="#" class="text-gray-300 hover:text-white">
+                <i class="fab fa-youtube text-xl"></i>
+              </a>
             </div>
           </div>
           <div>
@@ -132,58 +140,23 @@
           <div>
             <h4 class="text-lg font-semibold mb-4">Kontak</h4>
             <ul class="space-y-3 text-gray-300">
-              <li class="flex items-start"><i class="fas fa-map-marker-alt mt-1 mr-3"></i><span>Tambak, Berjo, Kec. Ngargoyoso, Kab. Karanganyar 57793 Karanganyar Central Java</span></li>
-              <li class="flex items-center"><i class="fas fa-phone-alt mr-3"></i><span>+62 856-4178-3101</span></li>
-              <li class="flex items-center"><i class="fas fa-envelope mr-3"></i><span>naufalhhdd@gmail.com</span></li>
-              <li class="flex items-center"><i class="fab fa-whatsapp mr-3"></i><span>+62 856-4178-3101</span></li>
+              <li class="flex items-start">
+                <i class="fas fa-map-marker-alt mt-1 mr-3"></i>
+                <span>Tambak, Berjo, Kec. Ngargoyoso, Kab. Karanganyar 57793 Karanganyar Central Java</span>
+              </li>
+              <li class="flex items-center">
+                <i class="fas fa-phone-alt mr-3"></i>
+                <span>+62 856-4178-3101</span>
+              </li>
+              <li class="flex items-center">
+                <i class="fas fa-envelope mr-3"></i>
+                <span>naufalhhdd@gmail.com</span>
+              </li>
+              <li class="flex items-center">
+                <i class="fab fa-whatsapp mr-3"></i>
+                <span>+62 856-4178-3101</span>
+              </li>
             </ul>
-          </div>
-        </div>
-        <div class="mt-12 pt-8 border-t border-gray-700 text-center text-gray-400">
-          <p>&copy; 2025 Izin.In. Hak Cipta Dilindungi.</p>
-          <div class="mt-2 flex justify-center space-x-6 text-sm">
-            <a href="#" class="hover:text-white">Kebijakan Privasi</a>
-            <a href="#" class="hover:text-white">Syarat & Ketentuan</a>
-            <a href="#" class="hover:text-white">Peta Situs</a>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <script src="js/navbar.js"></script>
-    <script src="js/isiPengaduan.js"></script>
-    <footer class="bg-secondary text-white pt-16 pb-8">
-      <div class="container mx-auto px-4">
-        <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-          <div>
-            <h4 class="text-lg font-semibold mb-4">Izin.In</h4>
-            <p class="text-gray-300 mb-4">Platform resmi untuk memudahkan perizinan UMKM di Indonesia dengan pelayanan cepat dan transparan.</p>
-          </div>
-          <div>
-            <h4 class="text-lg font-semibold mb-4">Tautan</h4>
-            <ul class="space-y-2">
-              <li><a href="/" class="text-gray-300 hover:text-white">Beranda</a></li>
-              <li><a href="/tentang.html" class="text-gray-300 hover:text-white">Tentang Kami</a></li>
-              <li><a href="/berita.html" class="text-gray-300 hover:text-white">Berita</a></li>
-              <li><a href="/pengaduan.html" class="text-gray-300 hover:text-white">Pengaduan</a></li>
-              <li><a href="/kontak.html" class="text-gray-300 hover:text-white">Kontak</a></li>
-            </ul>
-          </div>
-          <div>
-            <h4 class="text-lg font-semibold mb-4">Kontak</h4>
-            <ul class="space-y-3 text-gray-300">
-              <li class="flex items-start"><i class="fas fa-map-marker-alt mt-1 mr-3"></i><span>Tambak, Berjo, Kec. Ngargoyoso, Kab. Karanganyar 57793 Karanganyar Central Java</span></li>
-              <li class="flex items-center"><i class="fas fa-phone-alt mr-3"></i><span>+62 856-4178-3101</span></li>
-              <li class="flex items-center"><i class="fas fa-envelope mr-3"></i><span>naufalhhdd@gmail.com</span></li>
-              <li class="flex items-center"><i class="fab fa-whatsapp mr-3"></i><span>+62 856-4178-3101</span></li>
-            </ul>
-          </div>
-          <div>
-            <h4 class="text-lg font-semibold mb-4">Media Sosial</h4>
-            <div class="flex space-x-4">
-              <a href="#" class="text-gray-300 hover:text-white"><i class="fab fa-facebook text-xl"></i></a>
-              <a href="#" class="text-gray-300 hover:text-white"><i class="fab fa-twitter text-xl"></i></a>
-              <a href="#" class="text-gray-300 hover:text-white"><i class="fab fa-instagram text-xl"></i></a>
-            </div>
           </div>
         </div>
         <div class="mt-12 pt-8 border-t border-gray-700 text-center text-gray-400">
@@ -202,20 +175,7 @@
         </div>
       </div>
     </footer>
+    <script src="js/navbar.js"></script>
+    <script src="js/isiPengaduan.js"></script>
   </body>
-</html>
-<html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pengaduan - Izin.In</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-        }
-    </style>
-</head>
 </html>
