--- a/layanan.html
+++ b/layanan.html
@@ -397,7 +397,7 @@
                 <div class="p-6">
                   <h4 class="font-semibold text-gray-700 mb-2">Persyaratan:</h4>
                   <ul class="mb-4 space-y-2">
-                    <li class="requirement-item flex items-start"><i class="fas fa-check-circle text-green-500 mt-1 mr-2"></i><span>Contoh logo merek dagang</span></li>
+                    <li class="requirement-item flex items-start"><i class="fas fa-check-circle text-green-500 mt-1 mr-2"></i><span>Surat permohonan perizinan</span></li>
                     <li class="requirement-item flex items-start"><i class="fas fa-check-circle text-green-500 mt-1 mr-2"></i><span>Surat pernyataan kepemilikan merek</span></li>
                     <li class="requirement-item flex items-start"><i class="fas fa-check-circle text-green-500 mt-1 mr-2"></i><span>Fotokopi KTP pemilik merek</span></li>
                     <li class="requirement-item flex items-start"><i class="fas fa-check-circle text-green-500 mt-1 mr-2"></i><span>Surat kuasa jika diwakilkan</span></li>
