--- a/terima-kasih.html
+++ b/terima-kasih.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body class="bg-gray-50 font-sans">
-    <div id="navbar-container"></div> class="bg-gray-100">
+    <div id="navbar-container"></div>
 
     <div id="navbar-container"></div>
 
