ini yang udah keren

--- a/layanan.html
+++ b/layanan.html
@@ -377,7 +377,7 @@
             <div class="mt-auto">
               <div class="bg-gray-50 border-t border-gray-100 p-4 flex justify-between items-center">
                 <span class="text-sm text-gray-500">Biaya: Rp 250.000</span>
-                <button class="bg-primary hover:bg-blue-600 text-white px-4 py-2 rounded-lg text-sm transition" data-service="Perizinan Usaha Baru">Ajukan Sekarang</button>
+                <a href="forum-pengajuan.html?layanan=Perizinan Usaha Baru" class="bg-primary hover:bg-blue-600 text-white px-4 py-2 rounded-lg text-sm transition inline-block">Ajukan Sekarang</a>
               </div>
             </div>
           </article>
@@ -434,7 +434,7 @@
             <div class="mt-auto">
               <div class="bg-gray-50 border-t border-gray-100 p-4 flex justify-between items-center">
                 <span class="text-sm text-gray-500">Biaya: Rp 150.000</span>
-                <button class="bg-primary hover:bg-blue-600 text-white px-4 py-2 rounded-lg text-sm transition" data-service="Perpanjangan Izin Usaha">Ajukan Sekarang</button>
+                <a href="forum-pengajuan.html?layanan=Perpanjangan Izin Usaha" class="bg-primary hover:bg-blue-600 text-white px-4 py-2 rounded-lg text-sm transition inline-block">Ajukan Sekarang</a>
               </div>
             </div>
           </article>
@@ -492,7 +492,7 @@
             <div class="mt-auto">
               <div class="bg-gray-50 border-t border-gray-100 p-4 flex justify-between items-center">
                 <span class="text-sm text-gray-500">Biaya: Rp 1.750.000</span>
-                <button class="bg-primary hover:bg-blue-600 text-white px-4 py-2 rounded-lg text-sm transition" data-service="Perizinan Usaha Kuliner">Ajukan Sekarang</button>
+                <a href="forum-pengajuan.html?layanan=Perizinan Usaha Kuliner" class="bg-primary hover:bg-blue-600 text-white px-4 py-2 rounded-lg text-sm transition inline-block">Ajukan Sekarang</a>
               </div>
             </div>
           </article>
@@ -550,7 +550,7 @@
             <div class="mt-auto">
               <div class="bg-gray-50 border-t border-gray-100 p-4 flex justify-between items-center">
                 <span class="text-sm text-gray-500">Biaya: Rp 1.750.000</span>
-                <button class="bg-primary hover:bg-blue-600 text-white px-4 py-2 rounded-lg text-sm transition" data-service="Perizinan Manufaktur">Ajukan Sekarang</button>
+                <a href="forum-pengajuan.html?layanan=Perizinan Manufaktur" class="bg-primary hover:bg-blue-600 text-white px-4 py-2 rounded-lg text-sm transition inline-block">Ajukan Sekarang</a>
               </div>
             </div>
           </article>
