--- a/layanan.html
+++ b/layanan.html
@@ -311,6 +311,9 @@
       }
     </style>
 
+    <!-- Navbar -->
+    <div id="navbar-container"></div>
+
     <!-- Hero -->
     <!-- Modern Hero Section -->
     <div class="gradient-bg text-white py-20 md:py-32 min-h-[70vh] flex items-center">
