--- a/kontak.html
+++ b/kontak.html
@@ -126,7 +126,7 @@
       </div>
     </div>
     <!-- Main Content -->
-    <main class="container mx-auto px-4 pb-16">
+    <main class="container mx-auto px-4 py-16 pb-16">
       <div class="flex flex-col md:flex-row gap-10">
         <!-- Contact Info -->
         <div class="md:w-1/2 space-y-6 modern-card p-8 fade-in-up">
