--- a/forum-pengajuan.html
+++ b/forum-pengajuan.html
@@ -373,21 +373,23 @@
                 <textarea id="additionalInfo" name="additionalInfo" rows="3" class="form-input" placeholder="Masukkan informasi tambahan yang diperlukan"></textarea>
               </div>
               
-              <div>
-                <label class="form-label">Dokumen Pendukung</label>
-                <div id="fileUploadContainer" class="space-y-3">
-                  <div class="file-upload">
-                    <label for="file1" class="file-upload-label">
-                      <i class="fas fa-cloud-upload-alt"></i>
-                      Unggah Dokumen (PDF, JPG, PNG)
-                    </label>
-                    <input type="file" id="file1" name="files[]" accept=".pdf,.jpg,.jpeg,.png">
+              <div id="documentRequirements" class="mt-6 bg-yellow-50 border-l-4 border-yellow-400 p-4">
+                <div class="flex">
+                  <div class="flex-shrink-0">
+                    <svg class="h-5 w-5 text-yellow-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                      <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
+                    </svg>
+                  </div>
+                  <div class="ml-3">
+                    <p class="text-sm text-yellow-700">
+                      <strong>Dokumen yang diperlukan:</strong>
+                      <span id="requiredDocuments"></span>
+                    </p>
+                    <p class="text-sm text-yellow-700 mt-2">
+                      <strong>Catatan:</strong> Silakan siapkan dokumen berikut: <span id="requiredDocumentsNote"></span>. Dokumen akan dikirim melalui WhatsApp setelah pengajuan.
+                    </p>
                   </div>
                 </div>
-                <button type="button" id="addFileBtn" class="mt-2 text-primary hover:text-blue-700 font-medium">
-                  <i class="fas fa-plus mr-1"></i>Tambah Dokumen
-                </button>
-                <div id="uploadedFilesList" class="mt-4 space-y-2"></div>
               </div>
               
               <div id="termsContainer" class="space-y-2">
