--- a/tentang.html
+++ b/tentang.html
@@ -352,7 +352,7 @@
                 <h3 class="text-xl md:text-2xl font-bold">Struktur Organisasi</h3>
               </div>
               <div class="relative group">
-                <img src="/assets/struktur-organisasi.png" alt="Struktur Organisasi" class="w-full rounded-lg border border-gray-200 transition-all duration-300 group-hover:shadow-lg" />
+                <img src="/assets/strukturidn.jpg" alt="Struktur Organisasi" class="w-full rounded-lg border border-gray-200 transition-all duration-300 group-hover:shadow-lg" />
                 <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                   <button class="bg-primary text-white px-4 py-2 rounded-full shadow-lg flex items-center text-sm"><i class="fas fa-expand mr-2"></i> Perbesar</button>
                 </div>
