--- a/berita.html
+++ b/berita.html
@@ -207,6 +207,7 @@
         100% { transform: rotate(360deg); }
       }
     </style>
+    <link rel="stylesheet" href="css/animations.css">
   </head>
   <body class="bg-gray-50 font-sans">
     <div id="navbar-container"></div>
@@ -362,6 +363,7 @@
     <script src="js/navbar.js"></script>
     <script src="js/news.js"></script>
     <script src="/js/navbar.js"></script>
+    <script src="js/animations.js"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         const images = document.querySelectorAll('img');
