update navbar and footer

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
           
           .footer-3d::before {
               content: '';
-              position: absolute;a
+              position: absolute;
               top: 0;
               left: 0;
               right: 0;
@@ -880,7 +880,7 @@
             <div class="text-sm space-y-4">
               <p class="quote-text italic">"Web developer? More like an open invitation to get breached." – <span class="font-semibold text-white">Naufal (Leader & Underground Hacker)</span></p>
               <p class="quote-text italic">"You drain my time, code feeds my mind." – <span class="font-semibold text-white">Bowo (Fullstack Developer & Student Leader)</span></p>
-              <p class="quote-text italic">"The system's in ruins, but my code's still clean." – <span class="font-semibold text-white">Iqbal (Genius Coder & Product Architect)</span></p>
+              <p class="quote-text italic">"I am the architect of order in a realm of entropy, Intelligence on an immutable chain." – <span class="font-semibold text-white">Iqbal (Genius Coder & Product Architect)</span></p>
             </div>
           </div>
         </div>
@@ -980,7 +980,7 @@
   </script>
 
     <!-- JavaScript for Navbar -->
-    <script src="/js/navbar.js"></script>
+    <script src="js/navbar.js"></script>
     <script src="/js/news.js"></script>
     
     <!-- Advanced 3D Interactive Animations -->
