--- a/index.html
+++ b/index.html
@@ -251,6 +251,21 @@
           font-size: 2rem;
         }
       }
+      
+      /* Quick Access cards */
+      .card span {
+        color: #111827; /* text-gray-900 */
+      }
+
+      /* News section description */
+      .text-gray-600 {
+        color: #374151; /* text-gray-700 */
+      }
+
+      /* About section text */
+      .text-gray-700 {
+        color: #1f2937; /* text-gray-800 */
+      }
     </style>
   </head>
   <body class="bg-gray-100 font-sans">
