--- a/navbar.html
+++ b/navbar.html
@@ -584,7 +584,7 @@
         </div>
         
         <nav class="nav-desktop">
-            <a href="index.html" class="nav-link-3d active">
+            <a href="index.html" class="nav-link-3d">
                 <i class="fas fa-home mr-2"></i>Beranda
             </a>
             <a href="berita.html" class="nav-link-3d">
